--- a/static/user_style.css
+++ b/static/user_style.css
@@ -51,7 +51,7 @@ a:hover {
     width: 90%;
     max-width: 1200px;
     margin: 20px auto;
-    background-color: #fff;
+    background-color: #001570;
     padding: 25px;
     border-radius: 12px;
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.08);
