--- a/templates/login.html
+++ b/templates/login.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login fLy.SyRa</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='auth_style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='navbar_index_style.css') }}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
@@ -49,10 +50,6 @@
                 </div>
 
                 <button type="submit" class="form-btn form-btn-primary">Masuk</button>
-                <div style="text-align: center; color: #888; font-size: 0.9em; margin-top: 15px;">atau</div>
-                <button type="button" class="form-btn form-btn-secondary">
-                    <i class="fab fa-google"></i> Masuk dengan Google
-                </button>
             </form>
 
             <p class="bottom-link">
